ingress/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  externalIPs:
    - 147.228.242.37 
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - port: 8080
      name: webui
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: traefik-web-ui
#  namespace: kube-system
#  annotations:
#    kubernetes.io/ingress.class: traefik
#spec:
#  rules:
#  - host: traefik-ui.minikube
#    http:
#      paths:
#      - backend:
#          serviceName: traefik-web-ui
#          servicePort: 80
