ingress/traefik-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefikconsole 
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 8080
